# GEDSys

./: .gitignore  AirQuality.siddhi  CITATION.cff  LICENSE  README.md  create_sensorthing_DB.sql  dev-notes.md  geld.ebnf  property_hist.json  stream_hotday.py  testapp.siddhi
Formilizer/: README.md
Formilizer/tests/: event_def_test.json  tests.py
GeDL/: README.md
GeDL/.mps/: externalDependencies.xml  modules.xml
GeDL/devkits/Devkit/: Devkit.devkit
GeDL/grammar/: index.md
GeDL/languages/GeDL/: GeDL.mpl
GeDL/languages/GeDL.sandbox/: GeDL.sandbox.msd
archive/: formalizer-main.py
archive/templates/: event_publisher.xml  layout.html
examples/: DEMO.md  csv2thing.py  data_utils.py  register2api.py  update_data.py
examples/data/: 001thingNL10107.json  002thingNL10131.json  003thingNL10133.json  0046thingNL10821.json  004thingNL10136.json  005thingNL10138.json  006thingNL10230.json  007thingNL10235.json  008thingNL10236.json  009thingNL10237.json  010thingNL10240.json  011thingNL10241.json  012thingNL10246.json  013thingNL10247.json  014thingNL10248.json  015thingNL10301.json  016thingNL10318.json  017thingNL10404.json  018thingNL10418.json  019thingNL10437.json  020thingNL10442.json  021thingNL10444.json  022thingNL10445.json  023thingNL10446.json  024thingNL10449.json  025thingNL10450.json  026thingNL10538.json  027thingNL10550.json  028thingNL10617.json  029thingNL10633.json  030thingNL10636.json  031thingNL10639.json  032thingNL10641.json  033thingNL10643.json  034thingNL10644.json  035thingNL10722.json  036thingNL10738.json  037thingNL10741.json  038thingNL10742.json  039thingNL10807.json  (+33 more)
examples/gedl/: AirQuality-pm25-no2.gedl  AirQuality-pm25.gedl  HotDAy.gedl
formalizer/: README.md  event_formalizer.py  formalizer-main.py  formalizer.py
frost-server/: README.md  demoEntities.json
gedl-interpreter/: README.md  pyproject.toml
gedl-interpreter/docs/: conf.py
gedl-interpreter/src/steam_generator/: __init__.py  parse_response.py
gedl-interpreter/tests/: tests.py
gedl_interpreter/: README.md  example-gevent.json
gedl_interpreter/templates/: event_stream.json  execution_plan.siddhiql
interpreter/: README.md  config.example.env  demo.py  event_formalizer.py  pyproject.toml
interpreter/docs/: index.rst
interpreter/src/: README.md  pyproject.toml
interpreter/src/gedl-interpreter/steam_generator/: generator.py  prepare_requests.py
interpreter/src/gedl_interpreter/steam_generator/: main.py  parse_response.py  prepare_requests.py
interpreter/src/gedl_interpreter/stream_generator/: generator.py  main.py  parse_response.py  prepare_requests.py  response_parser.py
interpreter/static/: style.css
interpreter/templates/: hot directories.txt  new_event.html  receiver.xml
interpreter/tests/: event_def_test.json  test_generator.py  test_parse_response.py  test_prepare_requests.py  test_response_parser.py
languages-original/GeDL/: GeDL.mpl
languages/GeDL/: GeDL.mpl
languages/GeDL.sandbox/: GeDL.sandbox.msd
siddhi-runner/: README.md
siddhi-runner/apps/: README.md  exampleApp.siddhi
simulation/: AirQualityMultiple.siddhi  remove_duplicates.py
(+227 files in other folders)
