[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_handler", "src/stream_generator", "src/version.py"]

[tool.hatch.build.targets.sdist]
exclude = [
  "*.env",
]

[project]
name = "gedl-interpreter"
dynamic = ["version"]
description = "An interpreter for the GEDL language"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [ 
    {name = "Manuel G. Garcia Alvarez", email = "m.g.garciaalvarez@tudelft.nl"}]
keywords = ["gedl", "interpreter", "language", "GEDSys"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
 ]
 dependencies = [
    "python-dotenv >= 1.0.1",
    "shapely >= 2.0.4",
 ]

[project.optional-dependencies]
dev = [
    "pytest",
    "twine",
    "wheel",
    "hatchling"
]
[tool.hatch.version]
path = "src/version.py"



