[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gedl_interpreter"
version = "2.0.0"
authors = [
  { name="Manuel Garcia Alvarez", email="m.g.garciaalvarez@tudelt.nl" },
]
description = "An interpreter for the GEDL language, and a component of GEDsys"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manuGil/GEDsys"
Issues = "https://github.com/manuGil/GEDsys/issues"